--- a/public/output.css
+++ b/public/output.css
@@ -620,6 +620,9 @@
   .bg-\(--color-background\) {
     background-color: var(--color-background);
   }
+  .bg-\(--color-background-secodary\) {
+    background-color: var(--color-background-secodary);
+  }
   .bg-\(--color-background-secondary\) {
     background-color: var(--color-background-secondary);
   }
@@ -1183,6 +1186,11 @@
   .md\:h-\[25\%\] {
     @media (width >= 48rem) {
       height: 25%;
+    }
+  }
+  .md\:w-1\/2 {
+    @media (width >= 48rem) {
+      width: calc(1/2 * 100%);
     }
   }
   .md\:w-6 {
