--- a/public/output.css
+++ b/public/output.css
@@ -1240,6 +1240,11 @@
       gap: calc(var(--spacing) * 5);
     }
   }
+  .md\:gap-8 {
+    @media (width >= 48rem) {
+      gap: calc(var(--spacing) * 8);
+    }
+  }
   .md\:p-10 {
     @media (width >= 48rem) {
       padding: calc(var(--spacing) * 10);
