--- a/public/output.css
+++ b/public/output.css
@@ -333,6 +333,9 @@
   .h-full {
     height: 100%;
   }
+  .min-h-\[100dvh\] {
+    min-height: 100dvh;
+  }
   .min-h-screen {
     min-height: 100vh;
   }
